<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="new_here_create_an_account">New here? Create an account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="welcome_to_studybuddy">Welcome to \nStudyBuddy</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="date">Date (dd/mm/yyyy)</string>
    <string name="time">Time</string>
    <string name="new_to_do">New To-Do</string>
    <string name="priority">Priority</string>
    <string name="subject">Subject</string>

    <!-- Quiz strings -->
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s incorrect</string>
    <string name="Option1Ques1">36</string>
    <string name="Option2Ques1">16</string>
    <string name="Option3Ques1">22</string>
    <string name="Option4Ques1">55</string>
    <string name="next_text">next</string>
    <string name="prev_text">previous</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="quiz">Quiz</string>
    <string name="back">Back</string>
    <string name="q1">Five identical semicircles are arranged as shown.\nFind the diameter of one circle.</string>
    <string name="q3">What is the derivative of f\'(x-1)?</string>



</resources>