<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Level2">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:src="@drawable/f3"
        android:layout_height="wrap_content"/>

    <!--TextView used for showing questions on screen-->
    <TextView
        android:id="@+id/qsTextView"
        android:fontFamily="@font/roboto"
        android:text= "@string/q3"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Using another LinearLayout for showing buttons
        in horizontal orientation-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="bottom">

        <!--Choice 1-->
        <Button
            android:id="@+id/option1"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="1"
            android:textColor="@color/black"/>

        <!--Choice 2-->
        <Button
            android:id="@+id/option2"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="2"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="bottom">

        <!--Choice 3-->
        <Button
            android:id="@+id/option3"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/teal_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="0"
            android:textColor="@color/black"/>

        <!--Choice 4-->
        <Button
            android:id="@+id/option4"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="-1"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="bottom">

        <!--PreviousButton-->
        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:backgroundTint="#5052D8"
            android:text="@string/prev_text"
            android:visibility="invisible"/>

        <!--NextButton-->
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#5052D8"
            android:text="@string/next_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:gravity="bottom">
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="#5052D8"
            android:text="@string/back"/>
    </LinearLayout>

</LinearLayout>